[gd_scene load_steps=8 format=3 uid="uid://4sy2ckagii6g"]

[ext_resource type="PackedScene" uid="uid://bgxyenfwy5uc2" path="res://Scenes/Animations/transition_screen.tscn" id="1_l0qif"]
[ext_resource type="Script" uid="uid://c71yyh6pxe8bq" path="res://Scenes/Menu/next_level.gd" id="1_w18xm"]
[ext_resource type="FontFile" uid="uid://t6mmi7ubb1q1" path="res://fonts/GamejamFont-Regular.otf" id="2_w18xm"]
[ext_resource type="AudioStream" uid="uid://djpbxkpovfem" path="res://assets/sounds/click.wav" id="4_8yaa1"]
[ext_resource type="Texture2D" uid="uid://7g0426mo8ep1" path="res://assets/111.png" id="5_57svn"]

[sub_resource type="Theme" id="Theme_ox82g"]
default_font = ExtResource("2_w18xm")
default_font_size = 35

[sub_resource type="Theme" id="Theme_lvw8p"]
default_font = ExtResource("2_w18xm")
default_font_size = 35

[node name="Continue" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_w18xm")

[node name="transition_screen" parent="." instance=ExtResource("1_l0qif")]

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="MenuUI" type="Control" parent="CanvasLayer"]
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/MenuUI"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -69.5
offset_top = -62.5
offset_right = 69.5
offset_bottom = 62.5
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="NextLevel" type="Button" parent="CanvasLayer/MenuUI/VBoxContainer"]
layout_mode = 2
theme = SubResource("Theme_ox82g")
text = "Next Level"

[node name="Quit" type="Button" parent="CanvasLayer/MenuUI/VBoxContainer"]
layout_mode = 2
focus_neighbor_bottom = NodePath("../NextLevel")
theme = SubResource("Theme_lvw8p")
text = "Quit"

[node name="Click" type="AudioStreamPlayer" parent="."]
stream = ExtResource("4_8yaa1")
volume_db = -0.937
pitch_scale = 2.94

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0
scale = Vector2(0.50053, 0.503018)
texture = ExtResource("5_57svn")

[connection signal="pressed" from="CanvasLayer/MenuUI/VBoxContainer/NextLevel" to="." method="_on_next_level_pressed"]
[connection signal="pressed" from="CanvasLayer/MenuUI/VBoxContainer/Quit" to="." method="_on_quit_pressed"]
